Fix events section overflow

--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -306,6 +306,9 @@ body
     & + &
       margin-top: 40px
 
+.events
+  overflow: hidden
+
 .event
   display: flex
   align-items: center
